[package]
name = "prorata-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.3", features = ["derive"] }
prorata-core = { path = "core" }
prorata-methods = { path = "methods" }
rust_decimal = "1.29"
risc0-zkvm = { path = "../../risc0/zkvm", features = ["prove", "client"] }

#[features]
#cuda = ["risc0-zkvm/cuda"]
#default = []
#prove = ["risc0-zkvm/prove"]
